# clean

./: .gitignore  AGENTS.md  Clean.lean  README.md  disable_simp_linter.py  fix_simp_warnings.py  lake-manifest.json  lakefile.lean  package-lock.json
Clean/: Circuit.lean  Orchard.lean  Test.lean
Clean-Circomlib/: Bitify.lean  Comparators.lean
backends/plonky3/: Cargo.toml  README.md  readme.md
backends/plonky3/src/: check_constraints.rs  clean_air.rs  clean_ast.rs  config.rs  folder.rs  key.rs  lib.rs  lookup.rs  lookup_trace.rs  permutation.rs  proof.rs  prover.rs  verifier.rs
backends/plonky3/tests/: CircuitGen.lean  FemtoCairoGen.lean  TraceGen.lean  clean_air.rs  clean_fib.json  femtocairo_tests.rs  fib_tests.rs  generate_circuit.sh  generate_femtocairo_trace.sh  generate_trace.sh  lookup_negative_tests.rs  lookup_tests.rs  trace.json
backends/plonky3/tests/common/: mod.rs
backends/plonky3/tests/fixtures/: FemtoCairoCircuitGen.lean  FemtoCairoMemoryCircuitGen.lean  FemtoCairoMemoryTraceGen.lean  FemtoCairoTraceGen.lean  FibCircuitGen.lean  FibTraceGen.lean  clean_fib.json  generate_circuit.sh  generate_femtocairo_circuit.sh  generate_femtocairo_memory_circuit.sh  generate_femtocairo_memory_trace.sh  generate_femtocairo_trace.sh  generate_fib_circuit.sh  generate_fib_trace.sh  generate_trace.sh  run_lean.sh
backends/plonky3/tests/fixtures/output/: e2e_circuit.json  lean_fib_circuit.json  trace.json
backends/plonky3/tests/helpers/: femtocairo.rs  fib.rs  lean_runner.rs
backends/plonky3/tests/test_data/: femtocairo_circuit.json  femtocairo_trace.json
(+445 files in other folders)
